--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://resticdog.github.io/linkzz.github.io/
-root: /
+root: /linkzz.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
