--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: linkzz的小屋
 subtitle: 'going strong'
-description: ''
-keywords:
+description: '编程技术分享,Java,NAS,硬件,数码'
+keywords: Java,Code,NAS,硬件
 author: linkzz
 email: linkzz@qq.com
 language: zh-Hans
@@ -14,8 +14,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://resticdog.github.io/linkzz.github.io/
-root: /linkzz.github.io/
+url: https://resticdog.github.io/linkzz/
+root: /linkzz/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -94,12 +94,196 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: ayer
+theme_config:
+  # 侧边栏菜单
+  menu:
+    主页: /
+    归档: /archives
+    分类: /categories
+    标签: /tags
+
+  # 站点次标题和打字动效
+  # https://github.com/mattboldt/typed.js
+  subtitle:
+    enable: true  # 是否开启动效
+    text: going strong  # 显示的文字
+    text2: 愿你一生努力，一生被爱   # 滚动播放，如果不需要可以留空
+    text3: 想要的都拥有，得不到的都释怀  # 最多支持三段文字
+    startDelay: 0   # 延迟时间
+    typeSpeed: 200  # 打字速度
+    loop: true  # 是否循环
+    backSpeed: 100  # 回退速度
+    showCursor: true  # 是否显示光标
+
+  # 网站图标和侧边栏logo
+  favicon: /linkzz/favicon.ico
+  logo: /linkzz/images/logo_size_invert.jpg
+
+  # 封面配置
+  # enable-是否启用封面；path-封面背景图；logo-封面logo
+  cover:
+    enable: true
+    path: /linkzz/images/cover1.jpg  # /source/images目录下附送多张精美壁纸，可任意更换
+    logo: false # 如果不要直接设置成false
+
+  # 页面顶部进度条  
+  progressBar: true
+
+  # 网易云音乐插件
+  music:
+    enable: false
+    # 播放器尺寸类型(1：小尺寸、2：大尺寸)
+    type: 1
+    id: 518895142  # 网易云分享的音乐ID(更换音乐请更改此配置项)
+    autoPlay: true  # 是否开启自动播放
+
+  # 文章配置
+  # 文章太长，截断按钮文字(在需要截断的行增加此标记：<!--more-->)
+  excerpt_link: 阅读更多...
+  # 如果你嫌每篇文章手动加more标记比较麻烦，又不想在首页全文显示，可以把excerpt_all设置成true，这样首页只会显示文章归档
+  excerpt_all: false
+
+  # 是否开启代码复制按钮
+  copy_btn: true
+  # 是否开启文章分享按钮
+  share_enable: true
+  # 国内的社交平台(If you are not in China, maybe you prefer to set:false)
+  share_china: true
+  # 文章分享文字
+  share_text: 分享
+
+  # 分页文字
+  nav_text:
+    page_prev: 上一页
+    page_next: 下一页
+    post_prev: 上一篇
+    post_next: 下一篇
+
+  # 文章页是否显示目录
+  toc: true
+
+  # 文章中的图片是否支持点击放大
+  image_viewer: true
+
+  # https://github.com/willin/hexo-wordcount
+  # 是否开启字数统计(关闭请设置enable为false)
+  # 也可以单独在md文件里Front-matter设置`no_word_count: true`属性，来自定义关闭字数统计
+  word_count:
+    enable: true
+    # 只在文章详情显示(不在首页显示)
+    only_article_visit: true
+
+  # 打赏
+  # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-默认开启所有文章均有打赏，如果有些文章你不需要，请在文章对应的md文件里设置no_reward:true
+  reward_type: 0
+  # 打赏wording
+  reward_wording: '请我喝杯咖啡吧~'
+  # 支付宝二维码图片地址，跟你设置logo的方式一样。比如：/images/alipay.jpg
+  alipay: /images/alipay.jpg
+  # 微信二维码图片地址
+  weixin: /images/wechat.jpg
+
+  # 版权声明
+  # 版权声明type设定：0-关闭版权声明； 1-文章对应的md文件里有copyright: true属性，才有版权声明； 2-所有文章均有版权声明
+  copyright_type: 2
+
+  # 是否启用搜索
+  search: true
+
+  # RSS订阅(先安装hexo-generator-feed插件，再去博客根目录config进行配置)
+  # 不想显示可以直接留空
+  rss: /atom.xml
+
+  # 是否启用黑夜模式开关
+  darkmode: true
+
+  # 页面点击小红心(开启请设置为true)
+  clickLove: true
+
+  # 页面宽度自定义（不建议修改，可能造成布局混乱），article_width文章宽度，sidebar_width侧边栏宽度
+  layout:
+    article_width: 80rem
+    sidebar_width: 8rem
+    
+  # 评论：1、Valine(推荐)；2、Gitalk
+
+  # 1、Valine[一款快速、简洁且高效的无后端评论系统](https://github.com/xCss/Valine)
+  # 启用Valine必须先创建leancloud应用， 注册账号后获取 id|key 填入即可
+  leancloud:  
+    enable: true
+    app_id: #
+    app_key: #
+  # Valine配置(如果有些文章你想关闭评论，请在文章对应的md文件里设置no_valine:true)
+  valine:
+    enable: true # 是否启用
+    verify: false # 是否开启防垃圾评论验证
+    notify: false # 是否开启邮件提醒(https://valine.js.org/notify.html)
+    avatar: mp # 头像样式(https://valine.js.org/avatar.html)
+    placeholder: 给我的文章加点评论吧~ # placeholder
+
+  # 2、Gitalk(https://github.com/gitalk/gitalk)
+  gitalk:
+    enable: false # true
+    clientID: # GitHub Application Client ID
+    clientSecret: # Client Secret
+    repo: # Repository name
+    owner: # GitHub ID
+    admin: # GitHub ID
+    
+  # GitHub Ribbons-封面右上角的forkme，换样式直接在source/images目录下替换forkme图片
+  github: 
+    # (关闭请设置为false)
+    url: false
+
+  # fancybox(仅用于相册展示，若需要可配置albums)
+  fancybox: true
+
+  # 访问量统计(不蒜子)
+  busuanzi:
+    enable: false
+
+  # 友盟cnzz统计(url填js代码src链接)
+  cnzz:
+    enable: false
+    url: #
+
+  # Google Analytics
+  google_analytics: ''
+  # 百度统计
+  baidu_analytics: ''
+
+  # Mathjax数学公式
+  mathjax: true
+
+  # Katex数学公式(allpost设置为false时只有头部设置math:true的文章才开启)
+  katex:
+    enable: false # true
+    allpost: true
+    copy_tex: false
+
+  # 网站成立年份(默认为 2019，若填入年份小于当前年份，则显示为 2018-2019 类似的格式)
+  since: 2020
+
+  #是否显示页脚信息(建议保留，有助于本主题的推广)
+  pageFooter: true
+
+  #ICP备案信息尾部显示
+  icp:
+    enable: false
+    url: 'http://www.beian.miit.gov.cn/' # 备案链接
+    text: '浙ICP备88888888' # 备案信息
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: ''
+
+# hexo-generator-searchdb
+search:
+  path: search.xml
+  field: post
+  format: html
 
 feed:
   type: atom
