--- a/_config.yml
+++ b/_config.yml
@@ -117,14 +117,14 @@ theme_config:
     showCursor: true  # 是否显示光标
 
   # 网站图标和侧边栏logo
-  favicon: /linkzz/favicon.ico
-  logo: /linkzz/images/logo_size_invert.jpg
+  favicon: ./favicon.ico
+  logo: ./images/logo_size_invert.jpg
 
   # 封面配置
   # enable-是否启用封面；path-封面背景图；logo-封面logo
   cover:
     enable: true
-    path: /linkzz/images/cover1.jpg  # /source/images目录下附送多张精美壁纸，可任意更换
+    path: ./images/cover1.jpg  # /source/images目录下附送多张精美壁纸，可任意更换
     logo: false # 如果不要直接设置成false
 
   # 页面顶部进度条  
@@ -281,7 +281,7 @@ deploy:
 
 # hexo-generator-searchdb
 search:
-  path: search.xml
+  path: ./search.xml
   field: post
   format: html
 
