--- a/_config.yml
+++ b/_config.yml
@@ -212,15 +212,15 @@ theme_config:
   # 启用Valine必须先创建leancloud应用， 注册账号后获取 id|key 填入即可
   leancloud:  
     enable: true
-    app_id: #
-    app_key: #
+    app_id: hHABVfT4mzkxII30oOIMIBy2-gzGzoHsz
+    app_key: q2kp9sFd68uaSYHDWJk04Vrq
   # Valine配置(如果有些文章你想关闭评论，请在文章对应的md文件里设置no_valine:true)
   valine:
     enable: true # 是否启用
     verify: false # 是否开启防垃圾评论验证
     notify: false # 是否开启邮件提醒(https://valine.js.org/notify.html)
     avatar: mp # 头像样式(https://valine.js.org/avatar.html)
-    placeholder: 给我的文章加点评论吧~ # placeholder
+    placeholder: 来都来了,留下你的看法吧~ # placeholder
 
   # 2、Gitalk(https://github.com/gitalk/gitalk)
   gitalk:
